--- a/page/talks/2014-09-10.md
+++ b/page/talks/2014-09-10.md
@@ -1,17 +1,24 @@
 ----
 title:September Meetup
 subtitle:Learn what's coming up:
-description:
+description:Testing with Codeception
 date:2014-09-10
-time:1830 (6:30PM)
-speaker:
+time:18:30 (6:30PM)
+speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":"https://pbs.twimg.com/profile_images/491894858810798081/EOS8PjU7.jpeg"}]
 ----
+### Testing with Codeception
 
-We are looking for speakers and topic ideas.
+Thomas Dutrion will be demonstrating how [Codeception][1] can help us
+with the issues that affect testing of projects with
+dynamic frontend (angular, ember, etc.)  
+
+Find out more about Thomas on [twitter][2] and [his website][3].
 
 ---
 
 **Get updates by following [glasgowphp][99] on twitter.**
 
-
+[1]: http://codeception.com
+[2]: https://twitter.com/tdutrion
+[3]: https://www.engineor.com
 [99]: https://twitter.com/glasgowphp
