updated october and december talks

--- a/page/talks/2014-10-15.md
+++ b/page/talks/2014-10-15.md
@@ -4,20 +4,26 @@ subtitle:Learn what's coming up:
 description:
 date:2014-10-15
 time:18:30 (6:30PM)
-speaker:
+speaker:[{"name":"Michael MacLean","link":"https://twitter.com/mgdm","image":"https://pbs.twimg.com/profile_images/493302717033758720/1Rua6tVJ.jpeg"}]
 ----
-### Speaker required
 
-We are looking for a talk for this event. Do you have an idea?
-Check out our speaker package and [Let us know][98]!  
-<br/>
-**Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
-3rd Wednesday, 15th of October.**</span>
+### Making Websites Fast - from Front to Back
+
+Michael will provide an overview of some of the issues and solutions
+programmers should be familiar with in order to make their websites perform 
+well.
+
+He will talk about some of the lesser-known HTTP features, issues to watch out 
+when working with front-end technologies as well as a range of tools and 
+techniques useful with server side languages.
+
+Find out more about Michael on [twitter][4] and [his website][5].  
 
 ---
 
 **Get updates by following [glasgowphp][99] on twitter.**
 
-
+[4]: https://twitter.com/mgdm
+[5]: http://mgdm.net
 [98]: http://glasgowphp.co.uk/becomeaspeaker
 [99]: https://twitter.com/glasgowphp
