--- a/page/talks/2014-12-10.md
+++ b/page/talks/2014-12-10.md
@@ -9,8 +9,8 @@ speaker:[{"name":"Derick Rethans","link":"https://twitter.com/derickr","image":"
 
 ### From SQL to noSQL
 
-Derick will explain the differences between various types of noSQL databases 
-as well as the [CAP theorem][3]. He will then illustrate which paradigm shifts are 
+Derick will explain the differences between various types of noSQL databases.
+He will then illustrate which paradigm shifts are 
 necessary to successfully implement noSQL, using MongoDB as an example.
 
 > "The approaches to schema design, fault tolerance, the network breaking
@@ -18,7 +18,7 @@ necessary to successfully implement noSQL, using MongoDB as an example.
 > solutions and with this talk you will learn how to use MongoDB
 > effectively considering all the above mentioned situations." -- Derick Rethans
 
-Covered subjects include: CAP theorem, schema design, dealing with error
+Covered subjects include: NoSql types, schema design, dealing with error
 situations and architecture of multi-node set-ups.
 
 Find out more about Derick on [twitter][1] and his [website][2].
