added an attendee confirmation links to the post

--- a/page/talks/2014-10-15.md
+++ b/page/talks/2014-10-15.md
@@ -5,6 +5,7 @@ description:
 date:2014-10-15
 time:18:30 (6:30PM)
 speaker:[{"name":"Michael MacLean","link":"https://twitter.com/mgdm","image":"https://pbs.twimg.com/profile_images/493302717033758720/1Rua6tVJ.jpeg"}]
+attlink:{"otc":"https://opentechcalendar.co.uk/event/1996-monthly-glasgowphp-meetup","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-october-tickets-13688910901","mu":"http://www.meetup.com/GlasgowPHP/events/213251132"}
 ----
 
 ### Making Websites Fast - from Front to Back
