--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -4,20 +4,22 @@ subtitle:Learn what's coming up:
 description:
 date:2014-11-19
 time:18:30 (6:30PM)
-speaker:
+speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image":"https://pbs.twimg.com/profile_images/520670856704311296/7ulMk15T.jpeg"}]
 ----
-### Speaker required
+### What you want to hear about?
 
-We are looking for a talk for this event. Do you have an idea?
-Check out our speaker package and [Let us know][98]!
-<br/>
-**Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
-3rd Wednesday, 19th of November.**</span>
+[Paul Dragoons][2] will be talking about the thing that interests you the most!
+[Let him know][1] which topic you prefer.  
+  
+**  
+*Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
+3rd Wednesday, 19th of November.*</span>
 
 ---
 
 **Get updates by following [glasgowphp][99] on twitter.**
 
-
+[1]: http://bit.ly/1Dst9F0
+[2]: https://twitter.com/dr4goonis
 [98]: http://glasgowphp.co.uk/becomeaspeaker
 [99]: https://twitter.com/glasgowphp
