November topic update.

--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -6,10 +6,10 @@ date:2014-11-19
 time:18:30 (6:30PM)
 speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image":"https://pbs.twimg.com/profile_images/520670856704311296/7ulMk15T.jpeg"}]
 ----
-### What you want to hear about?
+### Testing, build automation and auto deployment
 
-[Paul Dragoons][2] will be talking about the thing that interests you the most!
-[Let him know][1] which topic you prefer.  
+Following the poll results. [Paul Dragoonis][2] will be talking about "Testing, build automation and auto deployment!".
+More detaiils coming soon.
   
 **  
 *Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
