--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -9,7 +9,7 @@ speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image"
 ### Testing, build automation and auto deployment
 
 Following the poll results. [Paul Dragoonis][2] will be talking about "Testing, build automation and auto deployment!".
-More detaiils coming soon.
+More details coming soon.
   
 **  
 *Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
