updateted November talk description

--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -8,18 +8,16 @@ speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image"
 ----
 ### Testing, build automation and auto deployment
 
-Following the poll results. [Paul Dragoonis][2] will be talking about "Testing, build automation and auto deployment!".
-More details coming soon.
-  
-**  
-*Please note that <span class="notice">this meetup</span> has a date change and <span class="notice">will be on a
-3rd Wednesday, 19th of November.*</span>
+During our November meetup [Paul Dragoonis][2] is going to talk about making 
+developers' lives easier. He will give us tips about testing our apps.
+Drawing on his vast experience he will share his knowledge about build 
+automation with Jenkins drawing particular attention to build integrity and
+follow on with auto-deployment options after successful builds.
 
 ---
 
 **Get updates by following [glasgowphp][99] on twitter.**
 
-[1]: http://bit.ly/1Dst9F0
 [2]: https://twitter.com/dr4goonis
 [98]: http://glasgowphp.co.uk/becomeaspeaker
 [99]: https://twitter.com/glasgowphp
