updated content for November

--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -9,10 +9,11 @@ speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image"
 ### Testing, build automation and auto deployment
 
 During our November meetup [Paul Dragoonis][2] is going to talk about making 
-developers' lives easier. He will give us tips about testing our apps.
-Drawing on his vast experience he will share his knowledge about build 
-automation with Jenkins drawing particular attention to build integrity and
-follow on with auto-deployment options after successful builds.
+developers' lives easier.  
+He will start with tips about testing our apps and then, drawing on his vast 
+experience, he will share his knowledge about build automation with Jenkins, 
+drawing particular attention to build integrity. He will conclude with 
+auto-deployment options after successful builds.
 
 ---
 
