updated content for November

--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -10,8 +10,8 @@ speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image"
 
 During our November meetup [Paul Dragoonis][2] is going to talk about making 
 developers' lives easier.  
-He will start with tips about testing our apps and then, drawing on his vast 
-experience, he will share his knowledge about build automation with Jenkins, 
+Presentation will start with tips about testing our apps and then, drawing on his vast 
+experience, Paul will share his knowledge about build automation with Jenkins, 
 drawing particular attention to build integrity. He will conclude with 
 auto-deployment options after successful builds.
 
