added raffle info

--- a/page/talks/2014-11-19.md
+++ b/page/talks/2014-11-19.md
@@ -14,11 +14,15 @@ Presentation will start with tips about testing our apps and then, drawing on hi
 experience, Paul will share his knowledge about build automation with Jenkins, 
 drawing particular attention to build integrity. He will conclude with 
 auto-deployment options after successful builds.
+<br/><br/>
+**Courtesy of [Zend][1] we have a Zend Framework 2 Exam voucher to give away in 
+our attendee raffle.  
+Make sure you are with us this Wednesday.**
 
 ---
 
 **Get updates by following [glasgowphp][99] on twitter.**
-
+[1]: http://www.zend.com
 [2]: https://twitter.com/dr4goonis
 [98]: http://glasgowphp.co.uk/becomeaspeaker
 [99]: https://twitter.com/glasgowphp
