--- a/page/talks/2014-12-10.md
+++ b/page/talks/2014-12-10.md
@@ -5,6 +5,7 @@ description:
 date:2014-12-10
 time:18:30 (6:30PM)
 speaker:[{"name":"Derick Rethans","link":"https://twitter.com/derickr","image":"https://pbs.twimg.com/profile_images/339232329/smiling_square.jpg"}]
+attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-december-tickets-14628071957"}
 ----
 
 ### From SQL to noSQL
