--- a/page/talks/2014-12-10.md
+++ b/page/talks/2014-12-10.md
@@ -22,14 +22,10 @@ necessary to successfully implement noSQL, using MongoDB as an example.
 Covered subjects include: NoSql types, schema design, dealing with error
 situations and architecture of multi-node set-ups.
 
-Find out more about Derick on [twitter][1] and his [website][2].
+Find out more about Derick on [twitter][1] and his [website][2].  
 
----
-
-**Get updates by following [glasgowphp][99] on twitter.**
+This month's raffle prize: two GlasgowPHP t-shirts
 
 [1]: https://twitter.com/derickr
 [2]: http://derickrethans.nl
-[3]: https://en.wikipedia.org/wiki/CAP_theorem
 [98]: http://glasgowphp.co.uk/becomeaspeaker
-[99]: https://twitter.com/glasgowphp
