--- a/page/talks/2015-02-11.md
+++ b/page/talks/2015-02-11.md
@@ -2,7 +2,7 @@
 title:December Meetup
 subtitle:Learn what's coming up:
 description:
-date:2015-02-17
+date:2015-02-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Yitzchok Willroth","link":"https://twitter.com/coderabbi","image":"https://pbs.twimg.com/profile_images/524683011397140480/3LEVBrRF.png"}]
 attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-february-tickets-14628408965"}
@@ -12,22 +12,17 @@ attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-february-tickets
 
 **AKA: "All I Really Need to Know, I Learned in Rabbinical School"**...  
 <br/>
-You've been programming for a while now. You're beginning to feel that you've 
+>You've been programming for a while now. You're beginning to feel that you've 
 got a handle on things but at the same time can't escape the feeling that 
 you've somehow plateaued in your growth as a software developer. In this talk 
 Yitzchok, a rabbinic scholar and software developer, shares the 
 "wisdom of the sages" as practical, actionable advice – strategies and 
 tactics – that you can use to reinvigorate your growth as a software developer.  
+
 <br/>
 A very [well received talk][3] by Yitzchok (Coderabbi) who is visiting from USA.  
 Find out more about him on [twitter][1] and his [website][2].
 
----
-
-**Get updates by following [glasgowphp][99] on twitter.**
-
 [1]: https://twitter.com/coderabbi
 [2]: http://coderabbi.github.io/about
 [3]: https://joind.in/talk/view/11879
-[98]: http://glasgowphp.co.uk/becomeaspeaker
-[99]: https://twitter.com/glasgowphp
