--- a/page/talks/2015-02-11.md
+++ b/page/talks/2015-02-11.md
@@ -23,6 +23,10 @@ tactics – that you can use to reinvigorate your growth as a software developer
 A very [well received talk][3] by Yitzchok (Coderabbi) who is visiting from USA.  
 Find out more about him on [twitter][1] and his [website][2].
 
+<br/>
+Please note that this talk will be held on <span class="notice">Wednesday
+11th of February at our <a href="#location"><span class="notice">new venue</span></a>.</span>
+
 [1]: https://twitter.com/coderabbi
 [2]: http://coderabbi.github.io/about
 [3]: https://joind.in/talk/view/11879
