--- a/page/talks/2015-02-11.md
+++ b/page/talks/2015-02-11.md
@@ -5,7 +5,7 @@ description:
 date:2015-02-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Yitzchok Willroth","link":"https://twitter.com/coderabbi","image":"https://pbs.twimg.com/profile_images/524683011397140480/3LEVBrRF.png"}]
-attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-february-tickets-14628408965"}
+attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-february-tickets-14628408965","mu":"http://www.meetup.com/GlasgowPHP/events/220320757"}
 ----
 
 ### Talmudic Maxims to Maximize Your Growth as a Software Developer
