Added speaker and talk

--- a/page/talks/2015-03-17.md
+++ b/page/talks/2015-03-17.md
@@ -4,11 +4,18 @@ subtitle:Learn what's coming up:
 description:
 date:2015-03-17
 time:18:30 (6:30PM)
-speaker:[]
+speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":"https://pbs.twimg.com/profile_images/491894858810798081/EOS8PjU7.jpeg"}]
 attlink:{}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### From API to The API with Apigility
 
+> An API-based architecture is essential to agile delivery of mobile applications.  
+
+[Thomas Dutrion][2] will be demonstrating how Apigility can help us with creating bespoke web APIs, in line with the best practices developed over the past years.
+
+You can find [Thomas on Twitter][3] or our IRC channel.
 
 [1]: /becomeaspeaker
+[2]: https://www.engineor.com
+[3]: https://twitter.com/tdutrion
