change of topic wording

--- a/page/talks/2015-03-17.md
+++ b/page/talks/2015-03-17.md
@@ -8,7 +8,7 @@ speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":
 attlink:{}
 ----
 
-### From API to The API with Apigility
+### Building APIs with Apigility
 
 > An API-based architecture is essential to agile delivery of mobile applications.  
 
