--- a/page/talks/2015-03-17.md
+++ b/page/talks/2015-03-17.md
@@ -8,7 +8,7 @@ speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":
 attlink:{}
 ----
 
-### Building APIs with Apigility
+### Building an API with Apigility
 
 > An API-based architecture is essential to agile delivery of mobile applications.  
 
