--- a/page/talks/2015-03-17.md
+++ b/page/talks/2015-03-17.md
@@ -5,7 +5,7 @@ description:
 date:2015-03-17
 time:18:30 (6:30PM)
 speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":"https://pbs.twimg.com/profile_images/491894858810798081/EOS8PjU7.jpeg"}]
-attlink:{}
+attlink:{"eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-march-tickets-16025884853","mu":"http://www.meetup.com/GlasgowPHP/events/220928837"}
 ----
 
 ### Building an API with Apigility
