added confirm links

--- a/page/talks/2015-04-21.md
+++ b/page/talks/2015-04-21.md
@@ -5,7 +5,7 @@ description:
 date:2015-04-21
 time:18:30 (6:30PM)
 speaker:[{"name":"Rob Allen","link":"https://twitter.com/akrabat","image":"https://pbs.twimg.com/profile_images/549716591412146178/0W0VpEqm_400x400.jpeg"}]
-attlink:{}
+attlink:{"eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-april-tickets-16026156666","mu":"http://www.meetup.com/GlasgowPHP/events/220929022"}
 ----
 
 ### Getting started with Dependency Injection
