Updated the May talk

--- a/page/talks/2015-05-19.md
+++ b/page/talks/2015-05-19.md
@@ -1,14 +1,19 @@
 ----
-title:May Meetup
+title:Hack: An Evolution of PHP
 subtitle:Learn what's coming up:
 description:
 date:2015-05-19
 time:18:30 (6:30PM)
-speaker:[]
-attlink:{}
+speaker:[{"name":"Josh Watzman","link":"https://twitter.com/jvwatzman","image":"https://pbs.twimg.com/profile_images/521509131224485888/QGdqo6LQ.jpeg"}]
+attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-may-hhvm-hacklang-tickets-16828433297",}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### Hack: An Evolution of PHP
 
+Although PHP has several features that allow engineers to be extremely productive in it, it also has several rough edges and pitfalls that cause problems (and often give the language a bad name). Josh - in his talk - will introduce Hack, Facebook's dialect of PHP. Hack keeps most of the PHP language -- all of the parts that make engineers so productive -- but sands down several of the more problematic sharp edges. It also introduces several new features, such as a simple yet extremely powerful syntax for asynchronous IO, to make the language even more effective for existing PHP programmers and newcomers alike.
 
-[1]: /becomeaspeaker
+Josh Watzman is an engineer at Facebook working on HackLang and HipHopVM.
+
+]Follow Josh on twitter][1]
+
+[1]: https://twitter.com/jvwatzman
