--- a/page/talks/2015-05-19.md
+++ b/page/talks/2015-05-19.md
@@ -5,7 +5,7 @@ description:
 date:2015-05-19
 time:18:30 (6:30PM)
 speaker:[{"name":"Josh Watzman","link":"https://twitter.com/jvwatzman","image":"https://pbs.twimg.com/profile_images/521509131224485888/QGdqo6LQ.jpeg"}]
-attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-may-hhvm-hacklang-tickets-16828433297",}
+attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-may-hhvm-hacklang-tickets-16828433297"}
 ----
 
 ### Hack: An Evolution of PHP
@@ -14,6 +14,6 @@ Although PHP has several features that allow engineers to be extremely productiv
 
 Josh Watzman is an engineer at Facebook working on HackLang and HipHopVM.
 
-]Follow Josh on twitter][1]
+[Follow Josh on twitter][1]
 
 [1]: https://twitter.com/jvwatzman
