--- a/page/talks/2015-05-19.md
+++ b/page/talks/2015-05-19.md
@@ -5,7 +5,7 @@ description:
 date:2015-05-19
 time:18:30 (6:30PM)
 speaker:[{"name":"Josh Watzman","link":"https://twitter.com/jvwatzman","image":"https://pbs.twimg.com/profile_images/521509131224485888/QGdqo6LQ.jpeg"}]
-attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-may-hhvm-hacklang-tickets-16828433297"}
+attlink:{"eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-may-hhvm-hacklang-tickets-16828433297","mu":"http://www.meetup.com/GlasgowPHP/events/222253582/"}
 ----
 
 ### Hack: An Evolution of PHP
