--- a/page/talks/2015-06-16.md
+++ b/page/talks/2015-06-16.md
@@ -1,14 +1,21 @@
 ----
-title:June Meetup
+title:Continuous Delivery in an AutoScaling environment
 subtitle:Learn what's coming up:
 description:
 date:2015-06-16
 time:18:30 (6:30PM)
-speaker:[]
+speaker:[{"name":"David McKay","link":"https://twitter.com/rawkode","image":"https://pbs.twimg.com/profile_images/378800000442258966/45c8907c69ded6d55f714448474a1eb7_400x400.jpeg"}]
 attlink:{}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
 
+### Continuous Delivery in an AutoScaling environment
 
-[1]: /becomeaspeaker
+From bootstrapping through provisioning to depoyment automating delivery in an environment with an unknown number of instances is tricky. In this month's talk David will explain how [SaltStack][3] and [Docker][4] are part of the solution his team implemented at [TeamRock][2], where flexibility, performance and speed are key to the success.  
+
+[David McKay][1] is a Technical Director at [TeamRock][2] - a pioniering startup bringin old media to the 21st century.  
+
+[1]: https://twitter.com/rawkode
+[2]: http://www.teamrock.com
+[3]: http://saltstack.com
+[4]: https://www.docker.com
