fixed typos + eb & mu links

--- a/page/talks/2015-06-16.md
+++ b/page/talks/2015-06-16.md
@@ -5,15 +5,15 @@ description:
 date:2015-06-16
 time:18:30 (6:30PM)
 speaker:[{"name":"David McKay","link":"https://twitter.com/rawkode","image":"https://pbs.twimg.com/profile_images/378800000442258966/45c8907c69ded6d55f714448474a1eb7_400x400.jpeg"}]
-attlink:{}
+attlink:{"eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-june-continuous-delivery-in-an-autoscaling-environment-tickets-17240852855","mu":"http://www.meetup.com/GlasgowPHP/events/222983961/"}
 ----
 
 
 ### Continuous Delivery in an AutoScaling environment
 
-From bootstrapping through provisioning to depoyment automating delivery in an environment with an unknown number of instances is tricky. In this month's talk David will explain how [SaltStack][3] and [Docker][4] are part of the solution his team implemented at [TeamRock][2], where flexibility, performance and speed are key to the success.  
+From bootstrapping through provisioning to deployment, automating delivery in an environment with an unknown number of instances is tricky. In this month's talk David will explain how [SaltStack][3] and [Docker][4] are part of the solution his team implemented at [TeamRock][2], where flexibility, performance and speed are key to the success.  
 
-[David McKay][1] is a Technical Director at [TeamRock][2] - a pioniering startup bringin old media to the 21st century.  
+[David McKay][1] is a Technical Director at [TeamRock][2] - a pioneering startup bringing old media to the 21st century.  
 
 [1]: https://twitter.com/rawkode
 [2]: http://www.teamrock.com
