--- a/page/talks/2015-08-18.md
+++ b/page/talks/2015-08-18.md
@@ -8,6 +8,10 @@ speaker:[]
 attlink:{}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### Summer Break  
+  
+  We are back in September.
+
+If you have an idea for a talk or a workshop, [let us know!][1]
 
 [1]: /becomeaspeaker
