--- a/page/talks/2015-09-15.md
+++ b/page/talks/2015-09-15.md
@@ -4,11 +4,10 @@ subtitle:Learn what's coming up:
 description:
 date:2015-09-15
 time:18:30 (6:30PM)
-speaker:[]
+speaker:[{"name":"Glynn Forrest","link":"https://github.com/glynnforrest","image":"https://avatars3.githubusercontent.com/u/578458?v=3&s=400"}]
 attlink:{}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### Aspect Oriented Programming
 
-
-[1]: /becomeaspeaker
+As applications add features and codebases get bigger, code duplication becomes a problem. Aspect Oriented Programming avoids repetition by injecting reusable aspects without altering the original code. This talk will explore the AOP options available for PHP, examine the pros and cons, and add some AOP features to a simple Symfony application.
