--- a/page/talks/2015-08-18.md
+++ b/page/talks/2015-08-18.md
@@ -10,8 +10,9 @@ attlink:{}
 
 ### Summer Break  
   
-  We are back in September.
+  We are back in [September][2].
 
 If you have an idea for a talk or a workshop, [let us know!][1]
 
 [1]: /becomeaspeaker
+[2]: /talks/2015-09-15
