--- a/page/talks/2015-10-20.md
+++ b/page/talks/2015-10-20.md
@@ -4,11 +4,17 @@ subtitle:Learn what's coming up:
 description:
 date:2015-10-20
 time:18:30 (6:30PM)
-speaker:[]
+speaker:[{"name":"Christopher Hoult","link":"https://twitter.com/choult","image":"https://pbs.twimg.com/profile_images/2765927760/620bf7391d49cb97a079948a66efb204.jpeg"}]
 attlink:{}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### Ethical Engineering
 
-
-[1]: /becomeaspeaker
+Our increasingly connected world, along with the promises of Big
+Data and Cloud Computing, offers us multitudes of opportunities to
+model the world and build powerful technology to improve not only
+the companies we work for but the lives of many. Yet far too often
+we, as engineers, focus on providing a solution to the problem at
+hand and overlook the problems that the solution itself might
+cause. In this talk, Christopher examines some of the issues our world throws up,
+and asks what it takes to engineer ethically.
