--- a/page/talks/2015-08-18.md
+++ b/page/talks/2015-08-18.md
@@ -10,9 +10,15 @@ attlink:{}
 
 ### Summer Break  
   
-  We are back in [September][2].
+  We are back in [September][2].  
+  ---  
+  
+  There are still tickets for [PHP Summer Camp in Rovinj, Croatia][3]  
+  [MEDx hackaton][4] in Glasgow takes place at the begining of September.
 
 If you have an idea for a talk or a workshop, [let us know!][1]
 
 [1]: /becomeaspeaker
 [2]: /talks/2015-09-15
+[3]: http://2015.phpsummercamp.com
+[4]: http://www.ameehacks.com
