--- a/page/talks/2015-10-20.md
+++ b/page/talks/2015-10-20.md
@@ -5,7 +5,7 @@ description:
 date:2015-10-20
 time:18:30 (6:30PM)
 speaker:[{"name":"Christopher Hoult","link":"https://twitter.com/choult","image":"https://pbs.twimg.com/profile_images/2765927760/620bf7391d49cb97a079948a66efb204.jpeg"}]
-attlink:{}
+attlink:{"eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-october-tickets-19107105868","mu":"http://www.meetup.com/GlasgowPHP/events/226089292/"}
 ----
 
 ### Ethical Engineering
@@ -18,3 +18,11 @@ we, as engineers, focus on providing a solution to the problem at
 hand and overlook the problems that the solution itself might
 cause. In this talk, Christopher examines some of the issues our world throws up,
 and asks what it takes to engineer ethically.
+
+#### Raffle
+
+This month's raffle is sponsored by [Jetbrains][1], [Vultr][2] and [SaltStack][3]
+
+[1]: https://www.jetbrains.com/
+[2]: https://vultr.com/
+[3]: http://saltstack.com/
