--- a/page/talks/2015-11-17.md
+++ b/page/talks/2015-11-17.md
@@ -4,11 +4,20 @@ subtitle:Learn what's coming up:
 description:
 date:2015-11-17
 time:18:30 (6:30PM)
-speaker:[]
-attlink:{}
+speaker:[{"name":"Brian Ward","link":"https://twitter.com/brian_ward","image":"https://pbs.twimg.com/profile_images/582561472909348865/UpJxWCV0.jpg"}]
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/226663962/"}
 ----
 
-### We are looking for speaker(s) for this meetup. Interested? [Let us know!][1]
+### Using VueJS in front of Drupal 8
+#### How to create beautiful, maintainable and de-coupled applications with Drupal 8.
 
+In this talk, Brian will provide tips and advice about building APIs,
+walk us through different ways of providing REST support in Drupal 8 and 
+introduce us to VueJS.
 
-[1]: /becomeaspeaker
+#### Raffle
+
+This month's raffle is sponsored by [Jetbrains][1] & [Vultr][2]
+
+[1]: https://www.jetbrains.com/
+[2]: https://vultr.com/
