--- a/page/talks/2016-02-09.md
+++ b/page/talks/2016-02-09.md
@@ -2,7 +2,7 @@
 title:February's Meetup
 subtitle:Learn what's coming up:
 description:
-date:Tuesday 6th of February
+date:2015-02-09
 time:18:30 (6:30PM)
 speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image":"https://pbs.twimg.com/profile_images/520670856704311296/7ulMk15T.jpeg"}]
 attlink:{}
