--- a/page/talks/2016-02-09.md
+++ b/page/talks/2016-02-09.md
@@ -10,8 +10,8 @@ attlink:{}
 
 ### Unleashing Frameworks
 
-More details coming soon.
+PHP application development is becoming more flexible than ever but many of you may still be choosing a single framework for all of the features, instead of ones that best match your application.  
 
+With the PPI Framework Engine you can compose parts of multiple frameworks that allow you to customise your software to suit and grow with you and your needs. It will allow you to make framework based decisions on a per-feature basis instead of a per-application basis.  
 
-[1]: https://www.jetbrains.com/
-[2]: http://www.glynnbird.com/
+In this talk I am going to demonstrate a framework delivery engine that lets you be in charge. Additionally, I will show you how you can modernise/refactor legacy systems or CMS’s (i.e: Wordpress) by utilising your PPI app as a service container within them.
