added march talk

--- a/page/talks/2016-03-08.md
+++ b/page/talks/2016-03-08.md
@@ -1,14 +1,19 @@
 ----
 title:March Meetup
 subtitle:Learn what's coming up:
-description:
+description:Kickass Dev Environments with Docker
 date:2016-03-08
 time:18:30 (6:30PM)
 speaker:[{"name":"","link":"","image":""}]
 attlink:{"mu":"","eb":""}
 ----
 
-### We are looking for a speaker
+### Kickass Dev Environments with Docker
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+Docker, the hottest technology around at the moment. It swept the Ops world by storm in 2014, became mainstream in 2015, and now it’s set to dominate the developer world, in 2016.  
+<br/>
+Docker is a tool that allows you to package your application up into a single-runnable distributable binary - akin to the phar, but in Hulk mode. Docker allows you, a developer, to specify the exact environment your application needs to run, across development; test; staging; and production.  
+<br/>
+In this talk I will cover the creation of this utopian distributable and show you how to compose your entire production infrastructure locally with only a small YAML file and without installing a single thing.  
+<br/>
+Lets say hello, to Docker. 
