added speaker details

--- a/page/talks/2016-03-08.md
+++ b/page/talks/2016-03-08.md
@@ -4,7 +4,7 @@ subtitle:Learn what's coming up:
 description:Kickass Dev Environments with Docker
 date:2016-03-08
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
+speaker:[{"name":"David McKay","link":"https://twitter.com/rawkode","image":"https://pbs.twimg.com/profile_images/378800000442258966/45c8907c69ded6d55f714448474a1eb7_400x400.jpeg"}]
 attlink:{"mu":"","eb":""}
 ----
 
