--- a/page/talks/2016-03-08.md
+++ b/page/talks/2016-03-08.md
@@ -5,7 +5,7 @@ description:Kickass Dev Environments with Docker
 date:2016-03-08
 time:18:30 (6:30PM)
 speaker:[{"name":"David McKay","link":"https://twitter.com/rawkode","image":"https://pbs.twimg.com/profile_images/378800000442258966/45c8907c69ded6d55f714448474a1eb7_400x400.jpeg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/229210189/","eb":"http://www.eventbrite.co.uk/e/glasgowphp-monthly-march-tickets-22366673322"}
 ----
 
 ### Kickass Dev Environments with Docker
