--- a/page/talks/2016-04-12.md
+++ b/page/talks/2016-04-12.md
@@ -8,7 +8,11 @@ speaker:[{"name":"","link":"","image":""}]
 attlink:{"mu":"","eb":""}
 ----
 
-### We are looking for a speaker
+### Teaching PHP - challenges, solutions & the future
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+Web development is a complex craft, and most of us, community members, worked and are still working hard on learning it.
+Being a lecturer at Edinburgh Napier University, PHP enthusiast and interested in sharing the knowledge, Thomas Dutrion relates his personal experiences as a lecturer and the challenges he faced.  
+Using the help of the community, he attempts to gather feedback in order to define a better framework to teach PHP.  
+Join us and have your say in helping to teach PHP to the next generations!
+
+**NOTE: This month we are back at STV HQ**
