added ext links

--- a/page/talks/2016-04-12.md
+++ b/page/talks/2016-04-12.md
@@ -4,8 +4,9 @@ subtitle:Learn what's coming up:
 description:
 date:2016-04-12
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
-attlink:{"mu":"","eb":""}
+speaker:[{"name":"Thomas Dutrion","link":"https://twitter.com/tdutrion","image":"https://pbs.twimg.com/profile_images/491894858810798081/EOS8PjU7.jpeg"}]
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/230128092/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-april-tickets-24413740154"}
+venue:[{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}]
 ----
 
 ### Teaching PHP - challenges, solutions & the future
