--- a/page/talks/2016-05-10.md
+++ b/page/talks/2016-05-10.md
@@ -4,11 +4,10 @@ subtitle:Learn what's coming up:
 description:
 date:2016-05-10
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
+speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image":"https://pbs.twimg.com/profile_images/520670856704311296/7ulMk15T.jpeg"}]
 attlink:{"mu":"","eb":""}
 ----
 
-### We are looking for a speaker
+### PHP in practice
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+More details coming soon! 
