may talk update

--- a/page/talks/2016-05-10.md
+++ b/page/talks/2016-05-10.md
@@ -5,9 +5,15 @@ description:
 date:2016-05-10
 time:18:30 (6:30PM)
 speaker:[{"name":"Paul Dragoonis","link":"https://twitter.com/dr4goonis","image":"https://pbs.twimg.com/profile_images/520670856704311296/7ulMk15T.jpeg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/231010478/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-may-tickets-25341912342"}
 ----
 
-### PHP in practice
+### Software Design in PHP7
 
-More details coming soon! 
+This talk covers the lessons learned on my journey of developing large-scale PHP applications for the past 10 years. 
+I will cover the core areas of software design (OOD) and programming (OOP) that are important to consider 
+when building your own software applications, with a focus on building them in PHP7.
+
+#### Raffle
+
+This month we have for you a JetBrains voucher, GlasgowPHP tee and a book "Learning PHP7 High Performance"
