--- a/page/talks/2016-05-10.md
+++ b/page/talks/2016-05-10.md
@@ -17,8 +17,8 @@ when building your own software applications, with a focus on building them in P
 #### Raffle
 
 This month we have for you a JetBrains voucher, GlasgowPHP tee and a book "Learning PHP7 High Performance"
-<br/><br/>
+<br/>
 
-You can provide feedback about the event and the talk at [joind.in](1)
+You can provide feedback about the event and the talk at [joind.in][1]
 
 [1]: https://joind.in/event/glasgowphp---may
