--- a/page/talks/2016-06-14.md
+++ b/page/talks/2016-06-14.md
@@ -1,14 +1,18 @@
 ----
-title:February's Meetup
+title:June's Meetup
 subtitle:Learn what's coming up:
 description:
-date:2016-06-14
+date:2016-06-16
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
-attlink:{"mu":"","eb":""}
+speaker:[{"name":"Dougal Matthews","link":"https://twitter.com/d0ugal","image":"https://pbs.twimg.com/profile_images/2525186932/kehv8eom14wr8ckt7sz8_400x400.jpeg"}]
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/231700661/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-june-tickets-25914791840"}
+venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
-### We are looking for a speaker
+### Effective Code Review
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+Developers usually state that finding defects is the primary motivation for doing code reviews. However, research has shown that the main benefits of code reviews are; knowledge transfer, team awareness and finding alternative solutions.  
+<br/>
+Code reviews when done well are more than just finding defects; it should be a discussion and conversation with other developers about finding the best solutions. We will talk about re-framing code review to encourage open discussions.  
+<br/>
+This talk is for everyone that is already involved in regular code review and those hoping to start. I will talk through the code review process with the aim of making it a better and more useful experience for both the authors and the reviewers.  
