--- a/page/talks/2016-10-11.md
+++ b/page/talks/2016-10-11.md
@@ -1,14 +1,20 @@
 ----
-title:February's Meetup
+title:October's Meetup
 subtitle:Learn what's coming up:
 description:
 date:2016-10-11
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
+speaker:[{"name":"Mike","link":"https://twitter.com/strayobject","image":""}]
 attlink:{"mu":"","eb":""}
+venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
-### We are looking for a speaker
+### Intro to real time development in PHP
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+This month we will look at real time apps and some of the libraries available.  
+Join us, while we build a simple kanban task board using [AMPHP][1]
+
+**Don't forget, inaugural [Scotland PHP Conference][2] is this month.**
+
+[1]: http://amphp.org
+[2]: https://conference.scotlandphp.co.uk
