a bit more spsecific text

--- a/page/talks/2016-10-11.md
+++ b/page/talks/2016-10-11.md
@@ -12,9 +12,11 @@ venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"
 ### Intro to real time development in PHP
 
 This month we will look at real time apps and some of the libraries available.  
-Join us, while we build a simple kanban task board using [AMPHP][1]
+Join us, while we have a look at basics of [ReactPHP][3], [Ratchet][4] and in the end build a simple kanban task board using [AMPHP][1]
 
 **Don't forget, inaugural [Scotland PHP Conference][2] is this month.**
 
 [1]: http://amphp.org
 [2]: https://conference.scotlandphp.co.uk
+[3]: http://reactphp.org
+[4]: http://socketo.me
