--- a/page/talks/2016-10-11.md
+++ b/page/talks/2016-10-11.md
@@ -4,7 +4,7 @@ subtitle:Learn what's coming up:
 description:
 date:2016-10-11
 time:18:30 (6:30PM)
-speaker:[{"name":"Mike","link":"https://twitter.com/strayobject","image":""}]
+speaker:[{"name":"Mike","link":"https://twitter.com/strayobject","image":"http://pbs.twimg.com/profile_images/1274682711/strayobject-icon_normal.jpg"}]
 attlink:{"mu":"","eb":""}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
