--- a/page/talks/2016-10-11.md
+++ b/page/talks/2016-10-11.md
@@ -5,7 +5,7 @@ description:
 date:2016-10-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Mike","link":"https://twitter.com/strayobject","image":"http://pbs.twimg.com/profile_images/1274682711/strayobject-icon_normal.jpg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/234750544/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-october-tickets-28498401486"}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
