--- a/page/talks/2016-11-08.md
+++ b/page/talks/2016-11-08.md
@@ -1,5 +1,5 @@
 ----
-title:February's Meetup
+title:November's Meetup
 subtitle:Learn what's coming up:
 description:
 date:2016-11-08
@@ -8,7 +8,10 @@ speaker:[{"name":"","link":"","image":""}]
 attlink:{"mu":"","eb":""}
 ----
 
-### We are looking for a speaker
+### See you all in the new year.
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+We are looking for speakers for next year. If you know someone who would be keen, let them know. If you fancy doing one yourself, [let us know][1].
+
+**Note:** There is no meetup in November.
+
+[1]: http://glasgowphp.co.uk/becomeaspeaker
