chore(talk): added empty January page

--- a/page/talks/2016-01-19.md
+++ b/page/talks/2016-01-19.md
@@ -2,22 +2,13 @@
 title:January's Meetup
 subtitle:Learn what's coming up:
 description:
-date:2016-01-19
+date:2017-01-10
 time:18:30 (6:30PM)
-speaker:[{"name":"Glynn Bird","link":"https://twitter.com/glynn_bird","image":"https://pbs.twimg.com/profile_images/58285534/glynn.jpg"}]
-attlink:{"mu":"http://www.meetup.com/GlasgowPHP/events/228070238/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-january-tickets-20771834115"}
+speaker:[]
+attlink:{}
 ----
 
-### Offline-first web development
-
-Last time we were talking about building an API with Drupal 8,
-this month we will explore offline-first approach to web development.
-Glynn Bird is going to introduce a technique where your web-app writes its data
-to an in-browser storage and syncs it back whenever internet connection is available. 
-
-
-Glynn is a Developer Advocate at IBM Cloud Data Services and works with PHP and Node.js  
-Find out more at [glynnbird.com][2]
+### 
 
 
 #### Raffle
@@ -25,4 +16,4 @@ Find out more at [glynnbird.com][2]
 This month's raffle is sponsored by [Jetbrains][1]
 
 [1]: https://www.jetbrains.com/
-[2]: http://www.glynnbird.com/
+[2]: 
