chore(talks): added more info about april

--- a/page/talks/2017-04-11.md
+++ b/page/talks/2017-04-11.md
@@ -4,12 +4,40 @@ subtitle:Learn what's coming up:
 description:
 date:2017-04-11
 time:18:30 (6:30PM)
-speaker:[{"name":"Stephen Koepplinger","link":"","image":""}]
+speaker:[{"name":"Stephen Koepplinger","link":"https://twitter.com/communityteams","image":"https://pbs.twimg.com/profile_images/640805013154041856/ci3CFh3s.png"}]
 attlink:{"mu":"","eb":""}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
 ### Community project review
 
-We will be doing a code review of a community platform.
-More info coming soon.
+This month we will learn a bit about an organisation which helps local communities improve the lives of young people,
+get to know the platform they are building in PHP and the issues they are facing 
+and help them by reviewing the codebase behind a platform.  
+
+**Here is more info about the platform**
+
+communityteams.com is developing a kind of 'digital scrapbook' for community groups and has two
+sections.   
+The first records events and the other is for supporting community projects.
+The recording of events feature allows community members 14 yrs+ to register:
+ - a comment about an event,
+ - the number of hours that team spends active and
+ - can upload a photo of the event
+
+These three elements can also be customised for every individual who attended the event, are
+compiled into personalised folios and can generate easily downloadable statistics.  
+The project support feature helps administrators (someone who is running the activity like the
+youth worker, teacher, responsible adult) get the best project support and can include:
+ - identifying projects by surveying group members
+ - appointing leaders
+ - reflecting on projects via exit questionnaires
+ 
+Upon project completion, participants are given an online folio, to use for college/job applications,
+so that the world can see what they have achieved.
+
+
+Learn more about [Community Teams][1] and [follow them on twitter][2].
+
+[1]: http://communityteams.com
+[2]: https://twitter.com/communityteams
