--- a/page/talks/2017-03-14.md
+++ b/page/talks/2017-03-14.md
@@ -9,6 +9,8 @@ attlink:{"mu":"","eb":""}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
-### API’s made easy with RAML
+### Social
 
-More info coming soon. 
+Join us for a friendly chat with pizza and beer.
+
+**note:** API’s made easy with RAML has been moved to a later date. Sorry.
