--- a/page/talks/2017-04-11.md
+++ b/page/talks/2017-04-11.md
@@ -6,7 +6,7 @@ date:2017-04-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Stephen Koepplinger","link":"https://twitter.com/communityteams","image":"https://pbs.twimg.com/profile_images/640805013154041856/ci3CFh3s.png"}]
 attlink:{"mu":"","eb":""}
-venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
+venue:{"address":"Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
 ### Community project review
