chore(april): Updated venue and added mu link

--- a/page/talks/2017-04-11.md
+++ b/page/talks/2017-04-11.md
@@ -5,8 +5,8 @@ description:
 date:2017-04-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Stephen Koepplinger","link":"https://twitter.com/communityteams","image":"https://pbs.twimg.com/profile_images/640805013154041856/ci3CFh3s.png"}]
-attlink:{"mu":"","eb":""}
-venue:{"address":"Spaces (floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/238765557/","eb":""}
+venue:{"address":"Inviqa (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
 ### Community project review
